k8s/14-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: shiivam22/banking-notification-service:v2
          ports:
            - containerPort: 3004
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: banking
spec:
  selector:
    app: notification-service
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
