k8s/5.frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-frontend
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-frontend
  template:
    metadata:
      labels:
        app: banking-frontend
    spec:
      containers:
        - name: banking-frontend
          image: shiivam22/banking-frontend:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: banking-frontend-service
  namespace: banking
spec:
  selector:
    app: banking-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
