k8s/8.transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: shiivam22/banking-transaction-service:v1-8
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: banking
spec:
  selector:
    app: transaction-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
