k8s/20-ingress-hostless.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-frontend-service
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 3002
          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 3003
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3004
